dom/base/DocumentOrShadowRoot.h
@@ -89,8 +89,6 @@ class DocumentOrShadowRoot : public RadioGroupManager {
 
   StyleSheetList* StyleSheets();
 
-  void GetAdoptedStyleSheets(nsTArray<RefPtr<StyleSheet>>&) const;
-
   void RemoveStyleSheet(StyleSheet&);
 
   Element* GetElementById(const nsAString& aElementId);
